State persistence added
* Added state persistence ability by keeping the state in rtc memory. After reset, the matrix inits with the previous effect. If rtc memory is empty, standard init should occur

* back.png replaced by the static color in style.css for better performance

* Reconnect stability improved

* TCP Reconnect moved to separate function

--- a/data/style.css
+++ b/data/style.css
@@ -19,7 +19,8 @@ body{
     border: 1px solid transparent;
     width: 90%;
     border-radius: 30px;
-    background-image: url(back.png);
+    background: rgb(87, 23, 170);
+    /* background: url(back.png); */
     background-size: 150%;
 }
 
